[gd_scene load_steps=4 format=3 uid="uid://in4lqr3eetvc"]

[ext_resource type="Script" path="res://material_maker/widgets/gradient_editor/gradient_popup.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ccm3h8eyt35f5" path="res://material_maker/widgets/gradient_editor/gradient_editor.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0.25098, 0.752941)

[node name="GradientPopup" type="Popup"]
size = Vector2i(420, 40)
visible = true
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_right = 420.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("1")

[node name="Control" parent="Panel" instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 415.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
embedded = false

[connection signal="popup_hide" from="." to="." method="_on_GradientPopup_popup_hide"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="updated" from="Panel/Control" to="." method="_on_Control_updated"]
